--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
         <div class="bg-black"></div>
         <div class="bg-picture"></div>
       </div>
-           <div class="description">
-        <h1 class="header">MODERN 
-          <br>ART GALLERY </h1>
+      <div class="description">
+        <h1 class="header">MODERN <br />ART GALLERY</h1>
 
-          <div class="descr">
-        <p>The arts in the collection of the Modern Art Gallery all started from a
-        spark of inspiration. Will these pieces inspire you? Visit us and find
-        out.</p>
-        <a href="location.html">
-          <div class="location-btn">
-            <button class="btn">Our location</button>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="none"
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="1.5"
-                d="m10 17l5-5l-5-5"
-              />
-            </svg>
-          </div>
-        </a>
+        <div class="descr">
+          <p>
+            The arts in the collection of the Modern Art Gallery all started
+            from a spark of inspiration. Will these pieces inspire you? Visit us
+            and find out.
+          </p>
+          <a href="location.html">
+            <div class="location-btn">
+              <button class="btn">Our location</button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="1em"
+                height="1em"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="1.5"
+                  d="m10 17l5-5l-5-5"
+                />
+              </svg>
+            </div>
+          </a>
         </div>
       </div>
     </div>
